<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/app_margin"
        tools:context=".activities.MainActivity">
    <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    <TextView
            android:id="@+id/main_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textSize="@dimen/text_title_large"
            android:gravity="center"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/main_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_name"
            android:gravity="bottom"
            android:textSize="30sp"
            android:textColorHint="#78909C" />
    <Button
            android:id="@+id/main_button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/text_button_play"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginHorizontal="10dp">

        <Button
                android:id="@+id/main_button_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_button_instructions"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_settings"
                android:layout_gravity="center"
                android:text="@string/text_button_settings"
                android:textSize="20sp" />
    </LinearLayout>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


</LinearLayout>