<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/app_margin"
        tools:context=".activities.InstructionsActivity">

    <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/instructions_title"
            android:gravity="center"
            android:text="@string/text_title_instructions"
            android:textSize="56sp" />

    <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructions_text"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/game_instructions"
            android:layout_gravity="top" />

    <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructions_button_back"
            android:text="@string/text_button_back"
            android:layout_gravity="fill_horizontal|bottom"
            android:textStyle="bold" />

</LinearLayout>